# SOPES1_1S2025

./: README.md
PROYECTO1/: .gitignore  comandos.txt  letras.txt  readme.md  script.sh
PROYECTO1/Containers/: script.sh
PROYECTO1/Kernel/: .monitor.o.d
PROYECTO1/Kernel/Final/: .Module.symvers.cmd  .final.ko.cmd  .final.mod.cmd  .final.mod.o.cmd  (+7 more)
PROYECTO1/rust_services/: Cargo.toml  Dockerfile  docker-compose.yaml
PROYECTO1/rust_services/graficas/: Dockerfile  cpu.json  ram.json
PROYECTO1/rust_services/src/: crontab.rs  desearilizar.rs  main.rs  mantener.rs  prototipofinal1.rs  prototipofinal2.rs  server.rs  servidoCrontab.rs
PROYECTO1/sscripts/: script.sh
PROYECTO2/: .gitignore  ddd.txt  docker-compose.yaml
PROYECTO2/api_rust/: Cargo.toml  Dockerfile
PROYECTO2/consumerKafka/: Dockerfile  consumer.go  go.mod  go.sum
PROYECTO2/consumerRabbit/: Dockerfile  go.mod  go.sum  main.go
PROYECTO2/grpc_client/: ayuda.txt  go.mod  go.sum  grpc_client.go  main.go
PROYECTO2/grpc_server_kafka/: Dockerfile  go.mod  main.go
PROYECTO2/grpc_server_rabbit/: Dockerfile  go.mod  main.go
PROYECTO2/kubernets/: grpc-client-deployment.yaml  grpc-client-service.yaml  ingress.yaml  kafka-cluster.yaml  kafka-consumer.yaml  kafka-producer-service.yaml  kafka-producer.yaml  kafka-service.yaml  kafka-topic.yaml  rabbit-consumer-deployment.yaml  rabbit-producer-deployment.yaml  redis-deployment.yaml  redis-service.yaml  rust-deployment.yaml  secret.yaml
PROYECTO2/producerKafka/: Dockerfile  go.mod  producer.go
PROYECTO2/producerRabbit/: Dockerfile  go.mod  main.go
(+29 files in other folders)
