[package]
name = "rust_services"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
ctrlc = "3.2"
bollard = "0.15"   # Cliente de Docker en Rust
futures-util = "0.3"
chrono = "0.4"
actix-files = "0.6"  # Añade esta línea